3.3.4/_sources/gallery/axisartist/axis_direction_demo_step02.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/axisartist/axis_direction_demo_step02.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_axisartist_axis_direction_demo_step02.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axisartist_axis_direction_demo_step02.py:


==========================
Axis Direction Demo Step02
==========================

.. GENERATED FROM PYTHON SOURCE LINES 7-44



.. image:: /gallery/axisartist/images/sphx_glr_axis_direction_demo_step02_001.png
    :alt: axis direction demo step02
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import mpl_toolkits.axisartist as axisartist


    def setup_axes(fig, rect):
        ax = axisartist.Subplot(fig, rect)
        fig.add_axes(ax)

        ax.set_ylim(-0.1, 1.5)
        ax.set_yticks([0, 1])

        #ax.axis[:].toggle(all=False)
        #ax.axis[:].line.set_visible(False)
        ax.axis[:].set_visible(False)

        ax.axis["x"] = ax.new_floating_axis(1, 0.5)
        ax.axis["x"].set_axisline_style("->", size=1.5)

        return ax


    fig = plt.figure(figsize=(6, 2.5))
    fig.subplots_adjust(bottom=0.2, top=0.8)

    ax1 = setup_axes(fig, 121)
    ax1.axis["x"].set_ticklabel_direction("+")
    ax1.annotate("ticklabel direction=$+$", (0.5, 0), xycoords="axes fraction",
                 xytext=(0, -10), textcoords="offset points",
                 va="top", ha="center")

    ax2 = setup_axes(fig, 122)
    ax2.axis["x"].set_ticklabel_direction("-")
    ax2.annotate("ticklabel direction=$-$", (0.5, 0), xycoords="axes fraction",
                 xytext=(0, -10), textcoords="offset points",
                 va="top", ha="center")

    plt.show()


.. _sphx_glr_download_gallery_axisartist_axis_direction_demo_step02.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: axis_direction_demo_step02.py <axis_direction_demo_step02.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: axis_direction_demo_step02.ipynb <axis_direction_demo_step02.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
